fix utf-8 output error